--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
-    "@capacitor-community/admob": "^6.0.0",
+    "@capacitor-community/admob": "6.0.0",
     "@capacitor/android": "^6.1.2",
+    "@capacitor/app": "^6.0.1",
     "@capacitor/core": "^6.1.2",
     "@capacitor/filesystem": "^6.0.1",
     "@capacitor/preferences": "^6.0.2",
